fix: proper wrap for nav buttons fix: proper load time

--- a/CSS/nav.css
+++ b/CSS/nav.css
@@ -1,4 +1,7 @@
 .top-nav {
+    display: flex;
+    flex-flow: wrap;
+
     position: relative;
     top: 0;
     width: 100%;
